[+] #265 Affichage des archives sur une périodes glissantes de 12 mois (contribution bazooka07)
[+] #266 Tri des pages statiques, catégories et plugins par drag n drop (contribution bazooka07)
[+] #269 Ajout scope[admin|site] dans les fichiers infos.xml des plugins pour charger un plugin uniquement coté admin, site ou les 2 (contribution bazooka07)
Fix Static Strict standards call : POO Plugin : parametres_plugins.php : Lorsque scope est spécifié sur "site", l'appel statique de getinstance provoque un message d'alerte (@sudwebdesign)
Fix #c6b5175 Warning Archive d'une année : array_key_exists() : 1er arg string ou int :class.plx.date.php (@sudwebdesign)
FIX Suppression fichier plugin update impossible (droit fichier)
FIX Chevauchement des menus de l'administration avec un facteur de zoom > 100%
FIX Administration : mauvais affichage des caractères spéciaux dans le nom de l'auteur d'un commentaire (contribution bazooka07)
FIX mediasManager.js : fonction callback inactive avec Firefox Quantum
FIX #220 Problème affichage css thème par défaut
FIX #237 urlRewrite et caractère &
FIX #249 ajout clés de traduction russe absentes
FIX #256 plxPlugin::setParam : mauvais test su le paramètre $type (contribution bazooka07)
FIX #260 Libellé de catégorie "Non classé" non affiché lors de la prévisualisation
FIX #262 Suppression tris inutiles

## PLUXML 5.6 (sortie : 05/04/2017) ##

[+] PluCSS 1.2
[+] Contrôle de la force des mots de passe saisis
[+] Protection attaque brute force sur l'écran de connexion à l'administration
[+] Administration > Paramètres > Thèmes : test existence fichier infos.xml dans le dossier thème pour le lister ou non
[+] Administration > Paramètres > Plugins : ajout filtre de recherche
[+] Administration > Paramètres > Options d'affichage : Nombre d'articles affichés par page dans les mots clés
[+] Administration : recherche possible à partir de l'identifiant d'un article
[+] Administration : suppression fichier install.php à partir du message d'information